--- a/index.html
+++ b/index.html
@@ -2,4 +2,20 @@
 <html lang="pt-BR">
 <head>
 <meta charsed="UTF-8">
+<title>Video</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="video box">
+    <iframe widht="560" height="315" scr="https://www.youtube.com/embed/kNJPa1ON82E"
+    frameborder="0" allowfullscreen><</iframe>
+    <div class="info">
+        <h3>Titulo</h3>
+        <p>Descriçao breve do video. </p>
+        </div>
+    </div>
+    </body>
+    </html>
 
+    
+    
